--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,3 +1,13 @@
+codecov:
+  branch: main
+
+coverage:
+  status:
+    project:
+      default:
+        informational: true
+    patch:
+      default:
+        informational: true
+
 comment: false
-github_checks:
-    annotations: false
