MNT: Add scipy as a new dep.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,8 +36,9 @@ dynamic = [
 dependencies = [
   "geopandas",
   "gmsh",
-  "numpy",
+  "numpy>=1.21",
   "pandas",
+  "scipy",
   "shapely>=2",
 ]
 [project.optional-dependencies]
