--- a/ci/requirements/environment-dev.yml
+++ b/ci/requirements/environment-dev.yml
@@ -3,15 +3,19 @@ channels:
 - conda-forge
 - nodefaults
 dependencies:
-- python>=3.10
+- python>=3.11
 
 - numpy
 - pandas
-- geopandas
+- geopandas-base
 - gmsh
 - python-gmsh
+- scipy
 - shapely >=2.0
 
 # dev deps
 - ipywidgets
 - ipykernel
+- matplotlib-base
+- folium
+- pyogrio
