--- a/readthedocs.yaml
+++ b/readthedocs.yaml
@@ -3,11 +3,11 @@ version: 2
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.11"
+    python: '3.11'
 
 python:
   install:
-    - requirements: doc/requirements.txt
+  - requirements: doc/requirements.txt
 
 sphinx:
   configuration: doc/source/conf.py
