--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,17 +1,13 @@
 version: 2
+formats:
+- htmlzip
 
 build:
   os: ubuntu-22.04
   tools:
-    python: mambaforge-4.10
-  jobs:
-    post_checkout:
-    - (git --no-pager log --pretty="tformat:%s" -1 | grep -vqF "[skip-rtd]") || exit 183
-    - git fetch --unshallow || true
-    pre_install:
-    - git update-index --assume-unchanged doc/source/conf.py ci/requirements/doc.yml
+    python: '3.11'
 
-conda:
-  environment: ci/requirements/doc.yml
-
-formats: []
+python:
+  install:
+  - method: pip
+    path: .[doc]
